[package]
name = "thrustbench"
version = "0.1.0"
edition = "2024"
description = "High-performance benchmark tool for HTTP/TCP/UDS server APIs"

[[bin]]
name = "thrustbench"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.2", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0.12"
regex = "1.10"
colored = "3.0.0"
indicatif = "0.17"
humantime = "2.1"
rustls = "0.23.27"
# TUI dependencies
ratatui = "0.29.0"
crossterm = "0.29.0"
tui-textarea = "0.7.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.9.1"